Add flash.now error message to default application view

--- a/99 Cats Deuce/app/views/layouts/application.html.erb
+++ b/99 Cats Deuce/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <% if flash.now[:error] %>
+      <% flash.now[:error].each do |err| %>
+        <%= err %>
+      <% end %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
