--- a/99 Cats Deuce/app/views/layouts/application.html.erb
+++ b/99 Cats Deuce/app/views/layouts/application.html.erb
@@ -9,8 +9,12 @@
   </head>
 
   <body>
-    <% if flash.now[:error] %>
-      <% flash.now[:error].each do |err| %>
+    <% if logged_in? %> 
+      <h1>Welcome, <%= current_user.username %></h1>
+    <% end %>
+
+    <% if flash[:error] %>
+      <% (flash[:error] ).each do |err| %>
         <%= err %>
       <% end %>
     <% end %>
